# MEGA-CORE-A-Quantum-Ontological-Cryptography-Protocol

./: CONTRIBUTING.md  ONTOLOGY_MAP.md  README.md  Readme_ ru.md  Report.md  app.py  calculate_df.php  environment.yml  full_report.md  main.py  pyproject.toml  requirements.txt  setup.py  tree.md  visual_resonance.js
.github/workflows/: deploy.yml  python-package-conda.yml
Genesis/: The_Memory_Report.md
src/: __init__.py  core.py  example_df.py
static/css/: style.css
templates/: index.html
tests/: test_df.py  test_shakespeare.py
